# Spectral-to-Splunk-Connector

./: README.md  pyproject.toml
.github/workflows/: spectral-scan.yml
spectral_to_splunk/: main.py
